Updated CORALA content warning banner

--- a/view/templates/content-warning-banner.phtml
+++ b/view/templates/content-warning-banner.phtml
@@ -21,7 +21,7 @@ function showContentBanner($site, $currentLocale) {
                 <script>
                     console.log('Este script se ejecuta solo una vez hasta que la cookie expire.');
                     var defaultBar = new $.peekABar({
-                        html: 'Advertencia de contenido: este sitio contiene material que puede resultarle ofensivo. <a href="/s/corala-es/page/introduccion#content_warning">Ver nuestra política sobre material sensible</a>.'
+                        html: 'Advertencia de contenido: este sitio contiene material que puede resultarle ofensivo. <a href="/s/corala-es/page/introduccion#content_warning">Vea nuestra declaración sobre el material sensible de la exposición</a>.'
                     });
                     defaultBar.show();
                 </script>
@@ -29,7 +29,7 @@ function showContentBanner($site, $currentLocale) {
                 <script>
                     console.log('This script runs only once until the cookie expires.');
                     var defaultBar = new $.peekABar({
-                        html: 'Content Warning: This site contains material you may find offensive. <a href="/s/corala/page/introduction#content_warning">View our policy on sensitive material</a>.'
+                        html: 'Content Warning: This site contains material you may find offensive. <a href="/s/corala/page/introduction#content_warning">View our statement on sensitive material in the exhibition</a>.'
                     });
                     defaultBar.show();
                 </script>
