Minor changes for CORALA

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3328,7 +3328,7 @@ width: 100%;
 
 .overlay-container h1,
 .overlay-container h2 {
-  background: $black;
+  background: $uom-footer;
   width: fit-content;
   padding: 1rem;
   color: $white;
