Revised CORALA Spanish text

--- a/view/templates/content-warning-banner.phtml
+++ b/view/templates/content-warning-banner.phtml
@@ -21,7 +21,7 @@ function showContentBanner($site, $currentLocale) {
                 <script>
                     console.log('Este script se ejecuta solo una vez hasta que la cookie expire.');
                     var defaultBar = new $.peekABar({
-                        html: 'Advertencia de contenido: este sitio contiene material que puede resultarle ofensivo. <a href="/s/corala-es/page/introduccion#content_warning">Vea nuestra declaración sobre el material sensible de la exposición</a>.'
+                        html: 'Aviso: Este sitio contiene material que puede resultar ofensivo. <a href="/s/corala-es/page/introduccion#content_warning">Por favor, dirigirse a nuestra declaración sobre material sensible en la muestra</a>.'
                     });
                     defaultBar.show();
                 </script>
