Updated CSS classes to ensure consistency over UoM platforms

--- a/asset/css/app.css
+++ b/asset/css/app.css
@@ -685,7 +685,7 @@ h1,
 h2,
 h3,
 h4,
-.site-title h1,
+.exhibition-identifier h1,
 h5,
 h6,
 pre,
@@ -729,7 +729,7 @@ h2,
 h3,
 .h3,
 h4,
-.site-title h1,
+.exhibition-identifier h1,
 .h4,
 h5,
 .h5,
@@ -749,7 +749,7 @@ h2 small,
 h3 small,
 .h3 small,
 h4 small,
-.site-title h1 small,
+.exhibition-identifier h1 small,
 .h4 small,
 h5 small,
 .h5 small,
@@ -784,7 +784,7 @@ h3,
 }
 
 h4,
-.site-title h1,
+.exhibition-identifier h1,
 .h4 {
     font-size: 1.125rem;
     line-height: 1.4;
@@ -823,7 +823,7 @@ screen and (min-width: 40em) {
         font-size: 1.9375rem
     }
     h4,
-    .site-title h1,
+    .exhibition-identifier h1,
     .h4 {
         font-size: 1.5625rem
     }
@@ -9765,17 +9765,17 @@ screen and (min-width: 40em) {
     margin-bottom: 0
 }
 
-.site-title h1 {
+.exhibition-identifier h1 {
     margin-bottom: 0
 }
 
 @media screen and (max-width: 39.99875em) {
-    .site-title h1 {
+    .exhibition-identifier h1 {
         font-weight: bold
     }
 }
 
-.site-title img {
+.exhibition-identifier img {
     margin: 1rem 0
 }
 
