--- a/asset/scss/inkwell.scss
+++ b/asset/scss/inkwell.scss
@@ -43,11 +43,11 @@ label,
     color: $white;
 }
 
-.site-title a:hover span {
+.exhibition-identifier a:hover span {
     color: $white;
     }
 
-span.h4.site-title-label {
+span.h4.exhibition-identifier-label {
     color: $black;
 }
 
