--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -23,7 +23,7 @@ h2 {
   }
 }
 
-.site-title {
+.exhibition-identifier {
   padding-left: $global-padding;
   max-width: calc(100vw - rem-calc(120));
   @include breakpoint(medium) {
@@ -34,11 +34,11 @@ h2 {
   }
 }
 
-.site-title img {
+.exhibition-identifier img {
   margin: $global-margin 0;
 }
 
-span.h4.site-title-label {
+span.h4.exhibition-identifier-label {
   margin-bottom: 0;
   font-size: 1.1 * $global-font-size;
   margin-right: 1.5 * $global-margin;
@@ -149,7 +149,7 @@ header .top-bar {
 }
 
 /*Set 'Manchester Digital Exhibitions text*/
-.site-heading {
+.site-identifier {
   color: $primary-color;
   text-decoration: none;
   display: flex;
@@ -173,7 +173,7 @@ header .top-bar {
   }
 }
 
-.site-heading p {
+.site-identifier p {
   color: $primary-color;
   margin-bottom: 0;
   @include breakpoint(700) {
