First pass at a consent gateway

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -65,12 +65,41 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         <?php endif; ?>
         </style>
         <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-MTKP79D'); </script> <!-- End Google Tag Manager -->
+        <style>
+        /* Basic styling for the modal */
+        #consentModal {
+            display: none; /* Hidden by default */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+            color: white;
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+        }
+        #consentModal button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+        }
+    </style>
     </head>
 
     <?php echo $this->htmlElement('body'); ?>
         <!-- Google Tag Manager (noscript) -->
             <noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-MTKP79D height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> 
         <!-- End Google Tag Manager (noscript) -->
+        <div id="consentModal">
+            <h1>We Need Your Consent</h1>
+                <p>This site contains material you may find offensive. <a href="#">View our policy on sensitive material.</a></p>
+            <button id="acceptConsent">I Accept</button>
+        </div>
         <div id="offCanvas" class="off-canvas position-left" data-off-canvas>
             <?php echo $site->publicNav()->menu()->setPartial('common/foundation-navigation.phtml')->renderPartialWithParams(['layout' => 'vertical']); ?>
         </div>
@@ -167,6 +196,28 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         <script>
           $(document).foundation(); 
         </script> 
+        <script>
+        $(document).ready(function () {
+            // Check if the user has already given consent
+            if (!localStorage.getItem('userConsent')) {
+                // Show the modal
+                $('#consentModal').show();
+
+                // Prevent scrolling or interaction with the page
+                $('body').css('overflow', 'hidden');
+            }
+
+            // Handle the consent button click
+            $('#acceptConsent').click(function () {
+                // Store consent in localStorage
+                localStorage.setItem('userConsent', 'true');
+
+                // Hide the modal and allow page interaction
+                $('#consentModal').fadeOut();
+                $('body').css('overflow', 'auto');
+            });
+        });
+        </script>
         <!-- Load the content warning banner code --> 
         <?php echo $this->partial('/templates/content-warning-banner'); ?>
         <!-- End content warning banner -->
