--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2675,6 +2675,50 @@ section.image-banner {
     }
   }
 
+/*Image Hero Styling*/ 
+/*Responsive img hero banner*/ 
+/*Image Hero*/
+.img-hero {
+  height: 18.75rem;
+  position: relative;
+  margin-top: rem-calc(-16px);
+  height: rem-calc(350px);
+  text-align: center;
+  background: $uom-footer;
+  @include breakpoint(medium) {
+    margin-top: rem-calc(-32px) !important;
+    height: rem-calc(400px);
+  }
+  @include breakpoint(xlarge) {
+    height: rem-calc(450px);
+  }
+}
+
+.img-hero img {
+width: 100%; 
+height: 100%; 
+object-fit: cover;
+display: block;
+margin: 0 auto;
+max-width: rem-calc(2000px);
+}
+
+#content .img-hero {
+  padding-block: 0;
+}
+
+.img-hero .hero-title-img {
+position: absolute;
+z-index: 9999;
+bottom: 20%;
+} 
+.hero-title-img h1 {
+  color: $white;
+  font-weight: 400;
+  background: $black;
+  padding: 0.5rem 1rem;
+}
+
 /*Media Object Styling*/ 
 .media-object {
   flex-direction: column;
