--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1412,93 +1412,48 @@ padding-bottom: 75%;
 }
 
 /*Blockquote*/
-/* center the blockquote in the page */
 .blockquote-wrapper {
-  display: flex;
-  height: 100%;
-  padding: 0 20px;
-  @include breakpoint(medium) {
-      height: 100vh;
+  max-width: rem-calc(800px);
+}
+
+blockquote {
+  color: #fff;
+  font-weight: 100;
+  font-size: 1.3rem;
+  line-height: 1.4;
+  position: relative;
+  margin: 2rem auto;
+  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  border-left: 0.4rem solid $warning-color;
+  @include breakpoint(large) {
+    font-size: 1.8rem;
+    padding: 0.5rem 0.5rem 0.5rem 2rem;
   }
 }
 
-/* Blockquote main style */
-blockquote {
-   position: relative;
-   max-width: rem-calc(620px);
-   margin: 2 * $global-margin auto;
-   align-self: center;
-   padding: unset;
-   border-left: unset;
+/*blockquote:before,
+blockquote:after {
+  position: absolute;
+  color: #8facad;
+  font-size: 8rem;
+  width: 4rem;
+  height: 4rem;
 }
 
-/* Blockquote header */
-blockquote h2 {
-   position: relative; /* for pseudos */
-   color: $primary-color;
-   font-size: 2 * $global-font-size;
-   font-weight: normal;
-   line-height: 1;
-   margin: 0;
-   border: 2px solid #fff;
-   border: solid 2px;
-   border-radius: rem-calc(20px);
-   padding: rem-calc(25px);
-   @include breakpoint(large) {
-      font-size: 3 * $global-font-size;
-      line-height: 1.2;
-   }
+blockquote:before {
+  content: "“";
+  top: -5rem;
 }
 
-/* Blockquote right double quotes */
-blockquote h2:after {
-   content:"";
-   position: absolute;
-   border: 2px solid $primary-color;
-   border-radius: 0 50px 0 0;
-   width: 60px;
-   height: 60px;
-   bottom: -60px;
-   left: 50px;
-   border-bottom: none;
-   border-left: none;
-   z-index: 3; 
-}
+blockquote:after {
+  content: "”";
+  bottom: -1rem;
+  right: 0;
+}*/
 
-blockquote h2:before {
-   content:"";
-   position: absolute;
-   width: 80px;
-   border: 6px solid $light-gray;
-   bottom: -3px;
-   left: 50px;
-   z-index: 2;
-}
-
-/* Blockquote subheader */
-blockquote cite {
-   position: relative;
-   color: $black;
-   font-size: 1.3 * $global-font-size;
-   font-weight: 400;
-   line-height: 1.2;
-   margin: 0;
-   padding-top: 15px;
-   z-index: 1;
-   margin-left:150px;
-   padding-left:12px;
-}
-
-
-blockquote cite:first-letter {
- margin-left:-12px;
- display: inline;
-}
-
-blockquote cite p {
-  display: inline;
-  font-style: initial;
-  font-size: 1.2 * $global-font-size;
+cite {
+  line-height: 2;
+  text-align: left;
 }
 
 .background-colour-1 {
