--- a/view/common/block-template/media-caption-text.phtml
+++ b/view/common/block-template/media-caption-text.phtml
@@ -56,7 +56,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                 <div class="caption margin-top-1 large-margin-top-2"><?php echo $caption; ?></div>
             <?php endif; ?>
             <div class="learn-more flex-container align-center">
-                <button class="button medium warning"><?php echo $item->link("View full item"); ?></button>
+                <button class="button medium warning hollow"><?php echo $item->link("View full item"); ?></button>
             </div>
         </div>
         <?php endforeach; ?>
