Added padding to media title for Media Text Caption blocks

--- a/view/common/block-template/media-caption-text.phtml
+++ b/view/common/block-template/media-caption-text.phtml
@@ -47,7 +47,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                     <?php endif; ?>
                 </div>
             <?php elseif ($showTitleOption === 'file_name'): ?>
-                <div class="separator-center metadata">
+                <div class="separator-center metadata margin-vertical-1">
                     <h2><?php echo $media->displayTitle(); ?></h2>
                 </div>
             <?php endif; ?>
