--- a/view/templates/content-warning-banner.phtml
+++ b/view/templates/content-warning-banner.phtml
@@ -69,7 +69,7 @@ function showContentBanner($site, $currentLocale) {
                         html: '<div class="warning-bar">\
                             <div class="warning-content">\
                             <p class="lead">Content Warning: This site contains material you may find offensive. \
-                            <a href="#">View our policy on sensitive material</a>.</p>\
+                            <a class="warning-color" href="#">View our policy on sensitive material</a>.\
                             </div>\
                         </div>'
                     });
