--- a/view/common/block-template/media-toggle-caption.phtml
+++ b/view/common/block-template/media-toggle-caption.phtml
@@ -9,7 +9,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en';
 <div class="<?php echo $this->escapeHtml(implode(' ', $classes)); ?>">
     <?php foreach($attachments as $attachment): ?>
     <?php $item = $attachment->item(); ?>
-    <div class="item resource toggle-caption">
+    <div class="item resource">
         <?php
         $media = $attachment->media() ?: $item->primaryMedia();
         if ($media):
@@ -38,23 +38,23 @@ $currentLocale = $this->siteSetting('locale') ?: 'en';
         ?>
 
         <?php $caption = $attachment->caption(); ?>
-        <div class="item resource toggle-caption">
-            <?php if ($attachment->caption()): ?>
-                <?php if (isset($caption) && !empty($caption)) : ?>
-                    <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?= htmlspecialchars($uniqueId, ENT_QUOTES, 'UTF-8') ?>" class="flex-container flex-dir-column align-spaced align-middle button warning">
-                        <?php if ($currentLocale == 'es'): ?>
-                            <h2 class="h5 margin-top-0">Lea la descripción de la imagen</h2>
-                        <?php else: ?>
-                            <h2 class="h5 margin-top-0">Read a description of the image</h2>
-                        <?php endif; ?>
-                    </button>
-                    <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
-                        <?=$caption
-                            ?>
-                    </figcaption>
+            <div class="toggle-caption">
+                <?php if ($attachment->caption()): ?>
+                    <?php if (isset($caption) && !empty($caption)) : ?>
+                        <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?= htmlspecialchars($uniqueId, ENT_QUOTES, 'UTF-8') ?>" class="flex-container flex-dir-column align-spaced align-middle button warning">
+                            <?php if ($currentLocale == 'es'): ?>
+                                <h2 class="h5 margin-top-0">Lea la descripción de la imagen</h2>
+                            <?php else: ?>
+                                <h2 class="h5 margin-top-0">Read a description of the image</h2>
+                            <?php endif; ?>
+                        </button>
+                        <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
+                            <?=$caption
+                                ?>
+                        </figcaption>
+                    <?php endif; ?>
                 <?php endif; ?>
-            <?php endif; ?>
-        </div>
+            </div>
 
         <div class="metadata">
             <?php $showTitleOption = $this->showTitleOption; ?>
